[package]
name = "webxr-webgl"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26"
glow = "0.11"
glam = "0.20"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1.7"
futures-util = { version = "0.3.19", default-features = false }
futures-executor = "0.3.19"

[dependencies.web-sys]
version = "0.3"
features = [
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Navigator',
    'WebGl2RenderingContext',
    'WebGlRenderingContext',
    'WebGlProgram',
    'WebGlShader',
    'WebGlBuffer',
    'WebGlActiveInfo',
    'WebGlUniformLocation',
    'WebGlFramebuffer',
    'Window',
    'Xr',
    'XrBoundedReferenceSpace',
    'XrEye',
    'XrFrame',
    'XrHandedness',
    'XrInputSource',
    'XrInputSourceArray',
    'XrInputSourceEvent',
    'XrInputSourceEventInit',
    'XrInputSourcesChangeEvent',
    'XrPose',
    'XrReferenceSpace',
    'XrReferenceSpaceEvent',
    'XrReferenceSpaceEventInit',
    'XrReferenceSpaceType',
    'XrRenderState',
    'XrRenderStateInit',
    'XrRigidTransform',
    'XrSession',
    'XrSessionEvent',
    'XrSessionEventInit',
    'XrSessionInit',
    'XrSessionMode',
    'XrSpace',
    'XrTargetRayMode',
    'XrView',
    'XrViewerPose',
    'XrViewport',
    'XrVisibilityState',
    'XrWebGlLayer',
    'XrWebGlLayerInit',
    'console',
]
